# 2023-11-27

./: .gitmodules  CMakeLists.txt  README.md  README.rst
exercise/: CMakeLists.txt  README.rst
exercise/firmware/: CMakeLists.txt
exercise/toolcase/base/: CMakeLists.txt
exercise/toolcase/boiling-pot/: CMakeLists.txt
exercise/toolcase/data-logger/: CMakeLists.txt
hello/: CMakeLists.txt
